# Change Log
All notable changes to this project will be documented in this file.

## Unreleased



## Version 2.2

- FIX : V13 Compatibility societe_id / socid *10/05/2021* 2.2.3
- FIX : V13 Compatibility No Token Renewal *10/05/2021* - 2.2.2
- FIX : V13 Compatibility after num_paiement property changed to num_payment *03/03/2021* - 2.2.1

## Version 1.0

- NEW : Automatic bank statement reconciliation *16/09/2013* - 1.0
- NEW : Automatic bank transaction creation when missing *16/09/2013* - 1.0
- NEW : Date format, file separator and file mapping can be defined in setup *16/09/2013* - 1.0
