@@ -652,7 +652,12 @@ function printStandardValues(&$db, &$user, &$langs, &$acct, &$objp, &$num, &$tot
 	print '<td class="standard_td nowrap">'.$type_label.' '.($objp->num_chq?$objp->num_chq:'').'</td>';
 
 	// Description
-	print '<td valign="center" class="standard_td nowrap"><a href="'.DOL_URL_ROOT.'/compta/bank/ligne.php?rowid='.$objp->rowid.'&amp;account='.$acct->id.'">';
+	$bankLineUrl = DOL_URL_ROOT.'/compta/bank/line.php';
+	if(version_compare(DOL_VERSION , '13.0.0', '<')){
+		$bankLineUrl = DOL_URL_ROOT.'/compta/bank/ligne.php';
+	}
+
+	print '<td valign="center" class="standard_td nowrap"><a href="'.$bankLineUrl.'?rowid='.$objp->rowid.'&amp;account='.$acct->id.'">';
 	$reg=array();
 	preg_match('/\((.+)\)/i',$objp->label,$reg);	// Si texte entoure de parenthese on tente recherche de traduction
 	if ($reg[1] && $langs->trans($reg[1])!=$reg[1]) print $langs->trans($reg[1]);
@@ -786,7 +791,7 @@ function printStandardValues(&$db, &$user, &$langs, &$acct, &$objp, &$num, &$tot
 			}
 		}
 
-	
+
 		if($links[key($links)]['type']=='payment_supplier') $param = 'fourn';
 		print '<br />'.getListFacture($links[key($links)]['url_id'], $param);
 
@@ -840,7 +845,13 @@ function printStandardValues(&$db, &$user, &$langs, &$acct, &$objp, &$num, &$tot
 
 	if ($user->rights->banque->modifier || $user->rights->banque->consolidate)
 	{
-		print '<td align="center"><a href="'.DOL_URL_ROOT.'/compta/bank/ligne.php?rowid='.$objp->rowid.'&amp;account='.$acct->id.'">';
+		// Description
+		$bankLineUrl = DOL_URL_ROOT.'/compta/bank/line.php';
+		if(version_compare(DOL_VERSION , '11.0.0', '<')){
+			$bankLineUrl = DOL_URL_ROOT.'/compta/bank/ligne.php';
+		}
+
+		print '<td align="center"><a href="'.$bankLineUrl.'?rowid='.$objp->rowid.'&amp;account='.$acct->id.'">';
 		print img_edit();
 		print "</a></td>";
 	}
