@@ -7,6 +7,8 @@ All notable changes to this project will be documented in this file.
 
 ## Version 2.2
 
+- FIX : Import keep saving PRE on new paiement but user doesn't selected this paiement   *24/01/2022* 2.2.5
+- FIX : V12 Compatibility card url for paiement *24/01/2022* 2.2.4
 - FIX : V13 Compatibility societe_id / socid *10/05/2021* 2.2.3
 - FIX : V13 Compatibility No Token Renewal *10/05/2021* - 2.2.2
 - FIX : V13 Compatibility after num_paiement property changed to num_payment *03/03/2021* - 2.2.1
